--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "clean-ddd",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "dayjs": "^1.11.13"
+  },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.8.1",
     "eslint": "^8.57.1",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "typescript": "^5.6.3",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.1.4"
   }
 }
