--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.1.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.8.1",
     "eslint": "^8.57.1",
