--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   ],
   "rules": {
     "no-useless-constructor": "off",
-    "no-new": "off"
+    "no-new": "off",
+     "@typescript-eslint/no-explicit-any": "off"
   },
   "env": {
     "vitest-globals/env": true
